# sentinel

./: Cargo.toml  README.md
src/: database.rs  database_reporter.rs  log.rs  main.rs  monitor.rs  server.rs
src/metrics/: main.rs  metric.rs  mod.rs  reporter.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  client.ts
