[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
sysinfo = "0.32.0"
tokio = { version = "1.40.0", features = ["full"] }
